fixes code word-wrapping in slides (closes #332)

--- a/app/pages/Slide.css
+++ b/app/pages/Slide.css
@@ -73,6 +73,9 @@
       font-size: 16px;
       line-height: 20px;
       white-space: pre-wrap;
+      & code {
+        overflow-wrap: break-word;
+      }
     }
     &.cheatSheet .slide-text {
       columns: 2;
